# storage/api-docs/api-docs.json
@@ -6,10 +6,10 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/users": {
+        "/api/users": {
             "get": {
                 "summary": "Display a listing of the resource",
-                "operationId": "7e2f5799553ec93c9c43e2a58490d447",
+                "operationId": "c457726701591d1183b53aa71fc13441",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
@@ -18,9 +18,43 @@
             },
             "post": {
                 "summary": "Store a newly created resource in storage",
-                "operationId": "a1fce870c566eb5fc0cf3178ec5d2fed",
+                "operationId": "592819a0265360b2014512d6dbfaf0e7",
                 "requestBody": {
-                    "required": true
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "allOf": [
+                                    {
+                                        "properties": {
+                                            "name": {
+                                                "type": "string",
+                                                "example": "John Doe"
+                                            }
+                                        },
+                                        "type": "object"
+                                    },
+                                    {
+                                        "properties": {
+                                            "email": {
+                                                "type": "string",
+                                                "example": "example@gmail.com"
+                                            }
+                                        },
+                                        "type": "object"
+                                    },
+                                    {
+                                        "properties": {
+                                            "password": {
+                                                "type": "string",
+                                                "example": "password"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                ]
+                            }
+                        }
+                    }
                 },
                 "responses": {
                     "201": {
@@ -29,10 +63,10 @@
                 }
             }
         },
-        "/users/{id}": {
+        "/api/users/{id}": {
             "get": {
                 "summary": "Display the specified resource",
-                "operationId": "910a0c7cf580e1c605648d82a4e57f46",
+                "operationId": "36a33ff774d5cba33c039dec2c3e0287",
                 "parameters": [
                     {
                         "name": "id",
@@ -51,7 +85,7 @@
             },
             "put": {
                 "summary": "Update the specified resource in storage",
-                "operationId": "ddfe232db1870b82493bf8bd25596d37",
+                "operationId": "b9091397c8b25f12c6adb74be6ce3a5a",
                 "parameters": [
                     {
                         "name": "id",
@@ -73,7 +107,7 @@
             },
             "delete": {
                 "summary": "Remove the specified resource from storage",
-                "operationId": "43dd20becb1f47444e484cbb18ce345c",
+                "operationId": "fa56cffde745d3f152f95cbacd936c0b",
                 "parameters": [
                     {
                         "name": "id",
@@ -90,6 +124,94 @@
                     },
                     "404": {
                         "description": "User not found"
+                    }
+                }
+            }
+        },
+        "/vaults": {
+            "get": {
+                "summary": "Display a listing of the resource",
+                "operationId": "3eb78925e5459e4b5ed698512a45207b",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            },
+            "post": {
+                "summary": "Store a newly created resource in storage",
+                "operationId": "c9851be49dc9ae0571cb7f394eac8866",
+                "requestBody": {
+                    "required": true
+                },
+                "responses": {
+                    "201": {
+                        "description": "Vault created successfully"
+                    }
+                }
+            }
+        },
+        "/vaults/{id}": {
+            "get": {
+                "summary": "Display the specified resource",
+                "operationId": "da6c5953d4f1238428d6826434dd1a76",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            },
+            "put": {
+                "summary": "Update the specified resource in storage",
+                "operationId": "e368e321ee19ac969403ce4d2dce0cee",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Vault updated successfully"
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Remove the specified resource from storage",
+                "operationId": "5d221ffd1c42193197e856c6278fc76d",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Vault deleted successfully"
+                    },
+                    "404": {
+                        "description": "Vault not found"
                     }
                 }
             }
